workplace/log/build_2024-05-05_21-18-59/learning/stdout_stderr.log
running egg_info
writing ../../build/learning/learning.egg-info/PKG-INFO
writing dependency_links to ../../build/learning/learning.egg-info/dependency_links.txt
writing entry points to ../../build/learning/learning.egg-info/entry_points.txt
writing requirements to ../../build/learning/learning.egg-info/requires.txt
writing top-level names to ../../build/learning/learning.egg-info/top_level.txt
reading manifest file '../../build/learning/learning.egg-info/SOURCES.txt'
writing manifest file '../../build/learning/learning.egg-info/SOURCES.txt'
running build
running build_py
copying learning/walk_t_sec.py -> /home/mi/workplace/build/learning/build/lib/learning
running install
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
running install_lib
copying /home/mi/workplace/build/learning/build/lib/learning/walk_t_sec.py -> /home/mi/workplace/install/learning/lib/python3.6/site-packages/learning
byte-compiling /home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/walk_t_sec.py to walk_t_sec.cpython-36.pyc
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/walk_t_sec.py", line 8
    def __init__(self, name,mode,(float)speed):
                                 ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../build/learning/learning.egg-info to /home/mi/workplace/install/learning/lib/python3.6/site-packages/learning-0.0.0-py3.6.egg-info
running install_scripts
Installing camera script to /home/mi/workplace/install/learning/lib/learning
Installing crash script to /home/mi/workplace/install/learning/lib/learning
Installing data_receive script to /home/mi/workplace/install/learning/lib/learning
Installing rgb script to /home/mi/workplace/install/learning/lib/learning
Installing rotate_until_center1 script to /home/mi/workplace/install/learning/lib/learning
Installing stand script to /home/mi/workplace/install/learning/lib/learning
Installing test script to /home/mi/workplace/install/learning/lib/learning
Installing track script to /home/mi/workplace/install/learning/lib/learning
Installing walk_t_sec script to /home/mi/workplace/install/learning/lib/learning
Installing walktest script to /home/mi/workplace/install/learning/lib/learning
writing list of installed files to '/home/mi/workplace/build/learning/install.log'
